Melhorei a cobertura de GroupConverter